# sudoku

./: .clang-format  .clang-tidy  .gcovr.cfg  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  conan_profile_macos  conanfile.py  requirements.txt
.github/workflows/: cache-cleanup.yml  ci.yml  linux-packaging.yml  nightly.yml  packaging.yml  static-analysis.yml  windows-packaging.yml
cmake/: Findlibsodium.cmake
docs/: ARCHITECTURE_PRINCIPLES.md  CODE_QUALITY.md  CODE_REVIEW_2026-05-25.md  CODE_REVIEW_2026-05-25_ISSUES.md  CODE_REVIEW_2026-07-06.md  CONAN_PROFILES.md  CPP_STYLE_GUIDE.md  ITIMEPROVIDER_PATTERN.md  PACKAGING.md  TRAINING_MODE.md  TRAINING_MODE_ROADMAP.md  TRANSLATIONS.md
flatpak/: io.github.darkstar79.Sudoku.yml  io.github.darkstar79.Sudoku_CPP.yml  org.sudoku_cpp.Sudoku.yml
include/core/: board.h  board_data.h  board_serializer.h  board_utils.h  constants.h
include/infrastructure/: app_directory_manager.h
resources/linux/: io.github.darkstar79.Sudoku.desktop  io.github.darkstar79.Sudoku.metainfo.xml  io.github.darkstar79.Sudoku_CPP.desktop  io.github.darkstar79.Sudoku_CPP.metainfo.xml  org.sudoku_cpp.Sudoku.desktop  org.sudoku_cpp.Sudoku.metainfo.xml
resources/locales/: de.yaml  en.yaml
resources/macos/: AppIcon.icns  Info.plist.in
resources/translations/: sudoku_de.ts  sudoku_en.ts
resources/windows/: sudoku.rc
scripts/: build_appimage.sh  build_windows.bat  build_windows.ps1  build_windows_debug.bat  check_determinism.sh  check_release_consistency.sh  check_translation_placeholders.py  check_translations.py  coverage.sh  cpd.sh  cppcheck.sh  create_installer.bat  create_installer.ps1  find_qt6.ps1  format.sh  iwyu.sh  migrate_getstring_to_loc.py  migrate_loc_to_tr.py  pgo_build.sh  pre-commit  pre-push  run_tests_windows.ps1  setup-hooks.sh  tidy-diff.sh  tidy.sh  yaml_to_ts.py
scripts/tests/: test_check_translation_placeholders.py
src/: main.cpp  version.h.in
src/core/: backtracking_solver.cpp  backtracking_solver.h  board.cpp  board_data.cpp  board_serializer.cpp  candidate_grid.h  constraint_state.cpp  constraint_state.h  cpu_features.cpp  cpu_features.h  di_container.cpp  di_container.h  encryption_manager.cpp  encryption_manager.h  file_utils.cpp  file_utils.h  game_validator.cpp  game_validator.h  i18n_helpers.h  i_clipboard_provider.h  i_game_validator.h  i_localization_manager.h  i_play_time_ledger.h  i_puzzle_generator.h  i_puzzle_rater.h  i_save_manager.h  i_settings_manager.h  i_solving_strategy.h  i_statistics_manager.h  i_sudoku_solver.h  i_time_provider.h  i_training_exercise_generator.h  i_training_statistics_manager.h  locale_utils.cpp  locale_utils.h  localization_manager.cpp  localization_manager.h  localized_explanations.h  observable.h  play_limit_policy.h  (+49 more)
src/infrastructure/: app_directory_manager.cpp  qt_clipboard_provider.h
src/model/: game_state.cpp  game_state.h
src/view/: board_painter.cpp  board_painter.h  board_render_data.cpp  board_render_data.h  color_utils.cpp  color_utils.h  key_utils.cpp  key_utils.h  keyboard_shortcuts.cpp  keyboard_shortcuts.h  locale_utils.cpp  locale_utils.h  main_window.cpp  main_window.h  puzzle_import_dialog.cpp  puzzle_import_dialog.h  puzzle_technique_dialog.cpp  puzzle_technique_dialog.h  style_colors.h  sudoku_board_widget.cpp  sudoku_board_widget.h  toast_widget.cpp  toast_widget.h  training_board_widget.cpp  training_board_widget.h  training_number_pad.cpp  training_number_pad.h  training_widget.cpp  training_widget.h  ui_colors.h
src/view_model/: game_view_model.cpp  game_view_model.h  game_view_model_board.cpp  game_view_model_hints.cpp  game_view_model_state.cpp  game_view_model_undo.cpp  play_limit_controller.cpp  play_limit_controller.h  training_view_model.cpp  training_view_model.h
tests/: CMakeLists.txt  profile_expert_puzzles.cpp  profile_hard_puzzles.cpp  profile_puzzle_generation.cpp
tests/benchmarks/: backtracking_rate_benchmark.cpp  puzzle_generation_benchmark.cpp  solver_path_benchmark.cpp
tests/data/: generator_config.yaml
tests/helpers/: benchmark_utils.cpp  benchmark_utils.h  benchmark_utils_impl.h  candidate_test_utils.h  fixture_serializer.cpp  fixture_serializer.h  game_view_model_fixture.h  in_memory_clipboard_provider.h  memory_monitor.cpp  memory_monitor.h  mock_localization_manager.h  mock_settings_manager.h  qt_test_main.cpp  strategy_test_utils.h  test_utils.cpp  test_utils.h  timeout_score_analyzer.h
tests/integration/: CMakeLists.txt  test_class_c_bucket_migration_integration.cpp  test_game_view_model_integration.cpp  test_puzzle_analyzer_integration.cpp  test_save_manager_integration.cpp  test_save_origin_integration.cpp  test_save_rating_model_compat_integration.cpp  test_statistics_manager_integration.cpp
tests/ui/: CMakeLists.txt  test_color_utils.cpp  (+19 more)
tests/unit/: CMakeLists.txt  test_als_chain_strategy.cpp  test_als_xy_wing_strategy.cpp  test_als_xz_strategy.cpp  test_app_directory_manager.cpp  test_auto_notes.cpp  test_avoidable_rectangle_strategy.cpp  test_backtracking_solver.cpp  test_basic_infrastructure.cpp  test_board.cpp  test_board_serializer.cpp  test_box_line_reduction_strategy.cpp  test_bug_plus_n_strategy.cpp  test_bug_strategy.cpp  test_candidate_grid.cpp  test_constraint_propagation_benchmark.cpp  test_constraint_state.cpp  test_continuous_nice_loop_strategy.cpp  test_cpu_features.cpp  test_death_blossom_strategy.cpp  test_di_container.cpp  test_empty_rectangle_strategy.cpp  test_encryption_manager.cpp  test_faithful_note_inverse.cpp  test_file_utils.cpp  test_finned_jellyfish_strategy.cpp  test_finned_swordfish_strategy.cpp  test_finned_x_wing_strategy.cpp  test_fixture_generator.cpp  test_forcing_chain_strategy.cpp  test_format_techniques.cpp  test_franken_fish_strategy.cpp  test_full_house_strategy.cpp  test_game_coaching_hints.cpp  test_game_state.cpp  test_game_validator.cpp  test_game_validator_branches.cpp  test_game_view_model_analyze.cpp  test_game_view_model_autosave_resume.cpp  test_game_view_model_commands.cpp  (+119 more)
(+62 files in other folders)
